--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -22,8 +22,8 @@
 <body {% if user.profile.dark_theme %}class="darken"{% endif %}>
   <!-- MAIN CONTENT -->
   <div class="container-fluid px-0">
-    <!-- MULTIBAR -->
-    <nav class="navbar fixed-top color-1-trans" id="dopebar">
+    <!-- DOPEBAR -->
+    <nav class="color-1-trans" id="dopebar">
       {% include "dopebar.min.html" %}
     </nav>
     <div class="container" id="main-wrapper">
@@ -52,7 +52,7 @@
       </div>
     </div>
     <!-- PLAYER -->
-    <div class="container-fluid fixed-bottom px-0" id="player">
+    <div class="container-fluid fixed-bottom" id="player">
       {% include "player.min.html" %}
     </div>
     <!-- FOOTER -->
