--- a/podcasts/templates/results_buttons.html
+++ b/podcasts/templates/results_buttons.html
@@ -3,7 +3,7 @@
     {% if user.is_authenticated %}
       <form class="subscriptions-form" action="{% url 'subscriptions' %}" method="POST">
         {% csrf_token %}
-        <input type="hidden" name="podids[]" value="{{ results.podcast.podid }}"> 
+        <input type="hidden" name="podid" value="{{ results.podcast.podid }}"> 
         {% if results.podcast.is_subscribed %}
           <button type="submit" class="btn-dope sub-button">
             Unsubscribe
@@ -94,60 +94,64 @@
   </a>
   {% endif %}
 </div>
-<div class="col-12 order-2 order-md-3 px-0">
-  {% if results.alphabet %}
-    <div class="collapse fade options-collapse" id="alphabet-collapse-{{ results.view }}">
-      <div class="options-buttons">
-        {% if results.alphabet_nix_url %}
-        <a class="btn-dope options-button nix-button" href="{{ results.alphabet_nix_url }}">
-          <i class="fas fa-times" title="Undo Selection"></i>
-        </a>
-        {% endif %} {% for alphabet in results.alphabet %} {% if alphabet.1 %}
-        <a class="btn-dope options-button" href="{{ alphabet.1 }}">
-          {{ alphabet.0 }}
-        </a>
-        {% else %}
-        <button class="btn-dope active">
-          {{ alphabet.0 }}
-        </button>
-        {% endif %} {% endfor %}
+{% if results.alphabet or results.genres or results.languages %}
+  <div class="col-12 order-2 order-md-3 results-options">
+    {% if results.alphabet %}
+      <div class="collapse fade options-collapse" id="alphabet-collapse-{{ results.view }}">
+        <div class="options-buttons">
+          {% if results.alphabet_nix_url %}
+          <a class="btn-dope options-button nix-button" href="{{ results.alphabet_nix_url }}">
+            <i class="fas fa-times" title="Undo Selection"></i>
+          </a>
+          {% endif %} {% for alphabet in results.alphabet %} {% if alphabet.1 %}
+          <a class="btn-dope options-button" href="{{ alphabet.1 }}">
+            {{ alphabet.0 }}
+          </a>
+          {% else %}
+          <button class="btn-dope active">
+            {{ alphabet.0 }}
+          </button>
+          {% endif %} {% endfor %}
+        </div>
       </div>
-    </div>
-  {% endif %} {% if results.genres %}
-    <div class="collapse fade options-collapse" id="genre-collapse-{{ results.view }}">
-      <div class="options-buttons">
-        {% if results.genre_nix_url %}
-        <a class="btn-dope options-button nix-button" href="{{ results.genre_nix_url }}">
-          <i class="fas fa-times" title="Undo Selection"></i>
-        </a>
-        {% endif %} {% for genre in results.genres %} {% if genre.1 %}
-        <a class="btn-dope options-button" href="{{ genre.1 }}">
-          {{ genre.0 }}
-        </a>
-        {% else %}
-        <button class="btn-dope active">
-          {{ genre.0 }}
-        </button>
-        {% endif %} {% endfor %}
+    {% endif %}
+    {% if results.genres %}
+      <div class="collapse fade options-collapse" id="genre-collapse-{{ results.view }}">
+        <div class="options-buttons">
+          {% if results.genre_nix_url %}
+          <a class="btn-dope options-button nix-button" href="{{ results.genre_nix_url }}">
+            <i class="fas fa-times" title="Undo Selection"></i>
+          </a>
+          {% endif %} {% for genre in results.genres %} {% if genre.1 %}
+          <a class="btn-dope options-button" href="{{ genre.1 }}">
+            {{ genre.0 }}
+          </a>
+          {% else %}
+          <button class="btn-dope active">
+            {{ genre.0 }}
+          </button>
+          {% endif %} {% endfor %}
+        </div>
       </div>
-    </div>
-  {% endif %} {% if results.languages %}
-    <div class="collapse fade options-collapse" id="language-collapse-{{ results.view }}">
-      <div class="options-buttons">
-        {% if results.language_nix_url %}
-        <a class="btn-dope options-button nix-button" href="{{ results.language_nix_url }}">
-          <i class="fas fa-times" title="Undo Selection"></i>
-        </a>
-        {% endif %} {% for language in results.languages %} {% if language.1 %}
-        <a class="btn-dope options-button" href="{{ language.1 }}">
-          {{ language.0 }}
-        </a>
-        {% else %}
-        <button class="btn-dope active">
-          {{ language.0 }}
-        </button>
-        {% endif %} {% endfor %}
+    {% endif %}
+    {% if results.languages %}
+      <div class="collapse fade options-collapse" id="language-collapse-{{ results.view }}">
+        <div class="options-buttons">
+          {% if results.language_nix_url %}
+          <a class="btn-dope options-button nix-button" href="{{ results.language_nix_url }}">
+            <i class="fas fa-times" title="Undo Selection"></i>
+          </a>
+          {% endif %} {% for language in results.languages %} {% if language.1 %}
+          <a class="btn-dope options-button" href="{{ language.1 }}">
+            {{ language.0 }}
+          </a>
+          {% else %}
+          <button class="btn-dope active">
+            {{ language.0 }}
+          </button>
+          {% endif %} {% endfor %}
+        </div>
       </div>
-    </div>
-  {% endif %}
-</div>
+    {% endif %}
+  </div>
+{% endif %}
