--- a/podcasts/templates/subscriptions.html
+++ b/podcasts/templates/subscriptions.html
@@ -25,7 +25,7 @@
           {% endif %}
         </p>
         <div class="subscriptions-buttons">
-          <form class="d-inline subscriptions-form" action="{% url 'subscriptions' %}" method="POST">
+          <form class="subscriptions-form" action="{% url 'subscriptions' %}" method="POST">
             {% csrf_token %}
             <input type="hidden" name="podids[]" value="{{ podcast.podid }}">
             <button type="submit" class="btn-dope">
