--- a/index/templates/dashboard.html
+++ b/index/templates/dashboard.html
@@ -1,5 +1,6 @@
 <div class="row">
   <div class="col-12 order-2 col-lg-4 order-lg-1 dope-wrapper">
+    {% include "genre-carousel.min.html" %}
   </div>
   <div class="col-12 order-1 col-lg-4 order-lg-2 dope-wrapper">
     <p>
@@ -20,5 +21,11 @@
     </p>
   </div>
   <div class="col-12 order-3 col-lg-4 dope-wrapper">
+    {% include "language-carousel.min.html" %}
   </div>
 </div>
+{% if request.is_ajax %}
+  <script>
+    $('.carousel').carousel();
+  </script>
+{% endif %}
