--- a/index/templates/genre-carousel.html
+++ b/index/templates/genre-carousel.html
@@ -1,24 +1,26 @@
 {% if results.genres %}
   {% with results.genres as genres %}
-    <p>{{ genres.count }} genres</p>
     <div id="genre-carousel" class="carousel slide carousel-fade" data-ride="carousel" data-interval="2500">
+      <h1>{{ genres.count }} genres</h1>
+      <a class="btn-dope" href="#genre-carousel" role="button" data-slide="prev">
+        <i class="fas fa-angle-up" title="Previous"></i>
+      </a>
       <div class="carousel-inner">
         {% for genre in genres %}
           <div class="carousel-item{% if forloop.first %} active{% endif %}">
-            <a class="browse-link" href="/search/?genre={{ genre.url_format }}">
-              {{ genre }}
-            </a>
+            <h1>
+              <a class="browse-link" href="/search/?genre={{ genre.url_format }}">
+                {{ genre }}
+              </a>
+            </h1>
             <p>
               {{ genre.n_podcasts }} podcasts
             </p>
           </div>
         {% endfor %}
       </div>
-      <a class="btn-dope" href="#genre-carousel" role="button" data-slide="prev">
-        <i class="fas fa-angle-left" title="Previous"></i>
-      </a>
       <a class="btn-dope" href="#genre-carousel" role="button" data-slide="next">
-        <i class="fas fa-angle-right" title="Next"></i>
+        <i class="fas fa-angle-down" title="Next"></i>
       </a>
     </div>
   {% endwith%}
