--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -55,7 +55,7 @@
           <i class="fas fa-download"></i>
         </a>
       </div>
-      <audio {% if user.is_authenticated %}onended="playNext()"{% endif %} controls preload="metadata" autoplay>
+      <audio {% if user.is_authenticated %}onended="playNext()"{% else %}onended="closePlayer()"{% endif %} controls preload="metadata" autoplay>
         <source src="{{ episode.url }}"/>
       </audio>
     </div>
