--- a/index/templates/settings.html
+++ b/index/templates/settings.html
@@ -1,10 +1,33 @@
 <div class="row">
   <div class="col-12 order-2 col-lg-4 order-lg-1 dope-wrapper">
-    <form class="change-password-form" action="{% url 'change_password' %}" method="POST">
-      {% csrf_token %}
-      <button class="btn-dope active" type="submit">
-        Change Password
-      </button>
+    <a class="btn-dope toggle" data-toggle="collapse" href="#change-collapse" aria-expanded="false" aria-controls="change-collapse">
+      Change Password
+    </a>
+    <form class="settings-form" action="{% url 'change_password' %}" method="POST">
+      <div class="collapse fade change-collapse" id="change-collapse">
+        {% csrf_token %}
+        <div class="form-row">
+          <div class="col-12 dope-form-group">
+            <label for="settings-oldpassword">Old password</label>
+            <input class="dope-field" type="password" name="oldpassword" required id="settings-oldpassword">
+          </div>
+          <div class="col-12 dope-form-group">
+            <label for="settings-password1">New password</label>
+            <input class="dope-field" type="password" name="password1" required id="settings-password1">
+          </div>
+          <div class="col-12 dope-form-group">
+            <label for="settings-password2">New password (again)</label>
+          </div>
+          <div class="col dope-form-group">
+            <input class="dope-field" type="password" name="password2" required="" id="settings-password2">
+          </div>
+          <div class="col-auto">
+            <button class="btn-dope active" type="submit">
+              Save
+            </button>
+          </div>
+        </div>
+      </div>
     </form>
   </div>
   <div class="col-12 order-1 col-lg-4 order-lg-2 dope-wrapper">
@@ -18,17 +41,22 @@
       <div class="form-row">
         <div class="col-12 dope-form-group">
           <label for="email">Email</label>
+        </div>
+        <div class="col dope-form-group">
           <input class="dope-field" type="email" name="email" id="email" value="{{ user_form.email.value }}">
+        </div>
+        <div class="col-auto">
+          <button class="btn-dope" type="submit">Save</button>
         </div>
         <div class="col-12 dope-form-group">
           <label for="theme">Theme</label>
-          {% if profile_form.dark_theme.value %}
+          {% if profile_form.theme.value == "dark" %}
             <input class="theme" type="hidden" name="theme" value="light" />
             <button class="btn-dope">Light</button>
-            <button class="btn-dope active">Dark</button>
-          {% else %}
+            <button type="button" class="btn-dope active">Dark</button>
+          {% elif profile_form.theme.value == "light" %}
             <input class="theme" type="hidden" name="theme" value="dark" />
-            <button class="btn-dope active">Light</button>
+            <button type="button" class="btn-dope active">Light</button>
             <button class="btn-dope">Dark</button>
           {% endif %}
         </div>
@@ -37,11 +65,19 @@
   </div>
   <div class="col-12 order-3 col-lg-4 dope-wrapper">
     <p>Delete account? Your playlist and subscriptions will be lost forever.</p>
+    <a class="btn-dope toggle" data-toggle="collapse" href="#solong-collapse" aria-expanded="false" aria-controls="solong-collapse">
+      Delete Account
+    </a>
     <form class="solong-form" action="{% url 'solong' %}" method="POST">
       {% csrf_token %}
-      <button class="btn-dope active" type="submit">
-        Delete Account
-      </button>
+      <div class="collapse fade solong-collapse" id="solong-collapse">
+        <button class="btn-dope" type="submit">
+          Yes
+        </button>
+        <a class="btn-dope" data-toggle="collapse" href="#solong-collapse" aria-expanded="false" aria-controls="solong-collapse">
+          No
+        </a>
+      </div>
     </form>
   </div>
 </div>
