--- a/index/templates/password_reset.html
+++ b/index/templates/password_reset.html
@@ -37,9 +37,14 @@
         <a class="login-link" href="/?view=login">
           Login
         </a>
-      </p>          
+      </p>        
     {% elif results.view == "confirm_email" %}
       <p>Your email is now confirmed.</p>
+      <p>
+        <a class="login-link" href="/?view=login">
+          Login
+        </a>
+      </p>
     {% endif %}
   </div>
 </div>
