subscriptions, about, carousels, ssl img links, etc

--- a/index/templates/footer.html
+++ b/index/templates/footer.html
@@ -1,7 +1,7 @@
 <div class="container px-0">
   <ul>
     <li>
-      <a class="dopebar-link" href="#">
+      <a class="dopebar-link about-link" href="{% url 'about' %}">
         About
       </a>
     </li>
