--- a/index/static/style.css
+++ b/index/static/style.css
@@ -370,19 +370,45 @@ a:hover {
 }
 .count {
   display: block;
-  font-size: 24px;
+  font-size: 28px;
   font-weight: 600;
 }
 
 /* CAROUSEL */
 .carousel {
+  border-top: 2px solid rgb(0, 191, 165);
   padding: 20px;
+  margin-top: 20px;
+}
+.carousel a {
+  color: unset;
 }
 .carousel h1 {
   font-size: 20px;
 }
 .carousel-inner {
   margin: 20px 0;
+}
+.carousel-item {
+  border: 2px solid rgb(0, 191, 165);
+  border-radius: 50%;
+  width: 80%;
+  height: 0;
+  padding: 25% 10% 55%;
+  margin: 0 10%;
+  transition: all .25s ease-in-out;
+  -moz-transition: all .25s ease-in-out;
+  -webkit-transition: all .25s ease-in-out;
+}
+.carousel-item:hover {
+  box-shadow: rgba(0, 0, 0, .5) 0 0 5px;
+  -moz-box-shadow: rgba(0, 0, 0, .5) 0 0 5px;
+  -webkit-box-shadow: rgba(0, 0, 0, .5) 0 0 5px;
+  transition: all .25s ease-in-out;
+  -moz-transition: all .25s ease-in-out;
+  -webkit-transition: all .25s ease-in-out;
+  color: #fff;
+  background: rgb(0, 191, 165);
 }
 
 /* SETTINGS */
@@ -598,7 +624,8 @@ a:hover {
 
 /* CHARTS */
 .charts-result a,
-.grid-result a {
+.grid-result a,
+.subscriptions-result a {
   color: unset;
   font-weight: unset;
 }
@@ -761,27 +788,34 @@ a:hover {
 }
 
 /* SEARCH RESULTS */
-.grid-results {
+.grid-results,
+.subscriptions-results {
   padding: 10px 0 0 10px;
 }
-.grid-result {
+.grid-result,
+.subscriptions-result {
   padding: 0 10px 10px 0;
 }
-.grid-result img {
+.grid-result img,
+.subscriptions-result img {
   border-radius: .25rem;
   margin-bottom: 10px;
   box-shadow: rgba(0, 0, 0, .5) 0 0 5px;
   -moz-box-shadow: rgba(0, 0, 0, .5) 0 0 5px;
   -webkit-box-shadow: rgba(0, 0, 0, .5) 0 0 5px;
 }
-.grid-result img:hover {
+.grid-result img:hover,
+.subscriptions-result img:hover {
   -moz-transform: scale(1.02);
   -webkit-transform: scale(1.02);
   -o-transform: scale(1.02);
   -ms-transform: scale(1.02);
   transform: scale(1.02);
 }
-.grid-result h1, .grid-result h2 {
+.grid-result h1,
+.grid-result h2,
+.subscriptions-result h1,
+.subscriptions-result h2 {
   word-wrap: break-word;
   font-size: 14px;
   margin-bottom: 5px;
@@ -790,35 +824,11 @@ a:hover {
 }
 
 /* SUBSCRIPTIONS */
-.subscriptions-result img {
-  float: left;
-  margin-right: 5px;
-  border-radius: .25rem;
-  box-shadow: rgba(0, 0, 0, .5) 0 0 5px;
-  -moz-box-shadow: rgba(0, 0, 0, .5) 0 0 5px;
-  -webkit-box-shadow: rgba(0, 0, 0, .5) 0 0 5px;
-}
-.subscriptions-result h1 {
-  font-size: 16px;
-  height: 38px;
-  margin-bottom: 3px;
-  overflow: hidden;
-}
 .subscriptions-result p {
-  margin-bottom: 3px;
-  font-weight: 400;
-  overflow: hidden;
+  font-size: 12px;
 }
-.subscriptions-result {
-  border: 2px solid rgb(0, 191, 165);
-}
-.subscriptions-result.selected {
+.subscriptions-result.selected .select-subscription {
   background: rgb(0, 191, 165);
-}
-.subscriptions-result.selected h1 {
-  color: #000;
-}
-.subscriptions-result.selected h1:hover {
   color: #fff;
 }
 .subscriptions-buttons {
