--- a/index/templates/language-carousel.html
+++ b/index/templates/language-carousel.html
@@ -1,22 +1,20 @@
 {% if results.languages %}
   {% with results.languages as languages %}
-    <div id="language-carousel" class="carousel slide carousel-fade" data-ride="carousel" data-interval="2500">
+    <div id="language-carousel" class="carousel slide carousel-fade" data-ride="carousel" data-interval="2000">
       <h1>{{ languages.count }} languages</h1>
       <a class="btn-dope" href="#language-carousel" role="button" data-slide="prev">
         <i class="fas fa-angle-up" title="Previous"></i>
       </a>
       <div class="carousel-inner">
         {% for language in languages %}
-          <div class="carousel-item{% if forloop.first %} active{% endif %}">
+          <a class="carousel-item{% if forloop.first %} active{% endif %} browse-link" href="/search/?language={{ language.url_format }}">
             <h1>
-              <a class="browse-link" href="/search/?language={{ language.url_format }}">
-                {{ language }}
-              </a>
+              {{ language }}
             </h1>
             <p>
               {{ language.n_podcasts }} podcasts
             </p>
-          </div>
+          </a>
         {% endfor %}
       </div>
       <a class="btn-dope" href="#language-carousel" role="button" data-slide="next">
