--- a/podcasts/templates/charts.html
+++ b/podcasts/templates/charts.html
@@ -8,8 +8,8 @@
         <span class="charts-rank">
           {{ forloop.counter }}
         </span>
-        <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.object.artworkUrl }}100x100bb.jpg"
-        onerror="this.src='http://{{ podcast.object.artworkUrl }}100x100bb.jpg'" alt="{{ podcast.object.title }}" />
+        <img class="img-fluid" src="https://{{ podcast.object.artworkUrl }}100x100bb.jpg"
+        onerror="this.src='https://dopepod.me/img/{{ podcast.object.artworkUrl }}100x100bb.jpg'" alt="{{ podcast.object.title }}" />
         <h1>
           <strong>
             {{ podcast.object.title }}
