--- a/podcasts/templates/last_played.html
+++ b/podcasts/templates/last_played.html
@@ -10,8 +10,8 @@
           {{ episode.length }}
         </span>
         {% endif %}
-        <img class="img-fluid" src="https://dopepod.me/img/{{ episode.podcast.artworkUrl }}100x100bb.jpg"
-        onerror="this.src='http://{{ episode.podcast.artworkUrl }}100x100bb.jpg'" />
+        <img class="img-fluid" src="https://{{ episode.podcast.artworkUrl }}100x100bb.jpg"
+        onerror="this.src='https://dopepod.me/img/{{ episode.podcast.artworkUrl }}100x100bb.jpg'" />
       </a>
       <a class="showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}" title="{{ episode.podcast.title }}" title="{{ episode.podcast.title }}">
         <h1>
