--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -14,8 +14,8 @@
         </button>
       </div>
       <a class="showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}" title="{{ episode.podcast.title }}">
-        <img class="img-fluid" src="https://dopepod.me/img/{{ episode.podcast.artworkUrl }}100x100bb.jpg"
-        onerror="this.src='http://{{ podcast.artworkUrl }}100x100bb.jpg'" alt="{{ episode.podcast.title }}" />
+        <img class="img-fluid" src="https://{{ episode.podcast.artworkUrl }}100x100bb.jpg"
+        onerror="this.src='https://dopepod.me/img/{{ podcast.artworkUrl }}100x100bb.jpg'" alt="{{ episode.podcast.title }}" />
       </a>
       <div class="player-buttons">
         <button class="btn-dope player-minimize">
