--- a/podcasts/templates/search.html
+++ b/podcasts/templates/search.html
@@ -9,7 +9,7 @@
     {% for podcast in results.podcasts1 %}
     <div class="col-lg-2 col-md-3 col-4 grid-result">
       <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}">
-        <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.src='http://{{ podcast.object.artworkUrl }}200x200bb.jpg'"
+        <img class="img-fluid" src="https://{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.src='https://dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg'"
           alt="{{ podcast.object.title }}" />
         <h1>
           <strong>
@@ -28,7 +28,7 @@
     {% for podcast in results.podcasts2 %}
     <div class="col-lg-2 col-md-3 col-4 grid-result">
       <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}">
-        <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.src='http://{{ podcast.object.artworkUrl }}200x200bb.jpg'"
+        <img class="img-fluid" src="https://{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.src='https://dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg'"
           alt="{{ podcast.object.title }}" />
         <h1>
           <strong>
@@ -47,7 +47,7 @@
     {% for podcast in results.podcasts3 %}
     <div class="col-lg-2 col-md-3 col-4 grid-result">
       <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}">
-        <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.src='http://{{ podcast.object.artworkUrl }}200x200bb.jpg'"
+        <img class="img-fluid" src="https://{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.src='https://dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg'"
           alt="{{ podcast.object.title }}" />
         <h1>
           <strong>
@@ -66,7 +66,7 @@
     {% for podcast in results.podcasts4 %}
     <div class="col-lg-2 col-md-3 col-4 grid-result">
       <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}">
-        <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.src='http://{{ podcast.object.artworkUrl }}200x200bb.jpg'"
+        <img class="img-fluid" src="https://{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.src='https://dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg'"
           alt="{{ podcast.object.title }}" />
         <h1>
           <strong>
