--- a/index/templates/about.min.html
+++ b/index/templates/about.min.html
@@ -1,1 +1,1 @@
-<div class="row"><div class="col-12 col-lg-4 dope-wrapper">dopepod does not store any files on its server. We only index and link to content provided by other sites.</div></div>
+<div class="row"><div class="col-12 col-lg-4 dope-wrapper"><p>dopepod does not store any files on its server. We only index and link to content provided by other sites.</p><p>dopepod 2018</p></div></div>
