--- a/index/templates/about.html
+++ b/index/templates/about.html
@@ -1,6 +1,11 @@
 <div class="row">
   <div class="col-12 col-lg-4 dope-wrapper">
-     dopepod does not store any files on its server. We only index and link to content provided by other sites.
+    <p>
+      dopepod does not store any files on its server. We only index and link to content provided by other sites.
+    </p>
+    <p>
+      dopepod 2018
+    </p>
   </div>
 </div>
     
