--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Exo"> 
   <link rel="stylesheet" href="{% static 'style.min.css' %}">
 </head>
-<body {% if user.profile.dark_theme %}class="darken"{% endif %}>
+<body class="{% if user.profile.theme == 'dark' %}darken{% endif %}">
   <!-- MAIN CONTENT -->
   <div class="container-fluid px-0">
     <!-- DOPEBAR -->
