--- a/index/templates/splashboard.html
+++ b/index/templates/splashboard.html
@@ -51,8 +51,13 @@
                   </a>
                 </div>
                 <div class="col form-check">
-                  <label class="form-check-label">
-                    <input class="form-check-input" type="checkbox" name="remember" id="remember"> Remember me
+                  <label class="dope-check-label">
+                    <input class="dope-check" type="checkbox" name="remember" id="remember">
+                    <span>
+                    </span>
+                    <p>
+                      Remember me
+                    </p>
                   </label>
                 </div>
               </div>
@@ -138,8 +143,13 @@
                   </a>
                 </div>
                 <div class="col form-check">
-                  <label class="form-check-label">
-                    <input class="form-check-input" type="checkbox" name="remember" id="remember"> Remember me
+                  <label class="dope-check-label">
+                    <input class="dope-check" type="checkbox" name="remember" id="remember">
+                    <span>
+                    </span>
+                    <p>
+                      Remember me
+                    </p>
                   </label>
                 </div>
               </div>
@@ -225,8 +235,13 @@
                   </a>
                 </div>
                 <div class="col form-check">
-                  <label class="form-check-label">
-                    <input class="form-check-input" type="checkbox" name="remember" id="remember"> Remember me
+                  <label class="dope-check-label">
+                    <input class="dope-check" type="checkbox" name="remember" id="remember">
+                    <span>
+                    </span>
+                    <p>
+                      Remember me
+                    </p>
                   </label>
                 </div>
               </div>
@@ -312,9 +327,13 @@
                   </a>
                 </div>
                 <div class="col form-check">
-                  <label class="form-check-label">
-                    <input class="form-check-input" type="checkbox" name="remember" id="remember">
-                    Remember me
+                  <label class="dope-check-label">
+                    <input class="dope-check" type="checkbox" name="remember" id="remember">
+                    <span>
+                    </span>
+                    <p>
+                      Remember me
+                    </p>
                   </label>
                 </div>
               </div>
