--- a/index/templates/genre-carousel.html
+++ b/index/templates/genre-carousel.html
@@ -7,7 +7,7 @@
       </a>
       <div class="carousel-inner">
         {% for genre in genres %}
-          <a class="carousel-item{% if forloop.first %} active{% endif %} browse-link" href="/search/?genre={{ genre.url_format }}">
+          <a class="carousel-item{% if forloop.first %} active{% endif %} browse-link" href="/search/?genre={{ genre.url_format }}&view=grid">
             <h1>
               <strong>
                 {{ genre }}
