--- a/index/templates/language-carousel.html
+++ b/index/templates/language-carousel.html
@@ -7,7 +7,7 @@
       </a>
       <div class="carousel-inner">
         {% for language in languages %}
-          <a class="carousel-item{% if forloop.first %} active{% endif %} browse-link" href="/search/?language={{ language.url_format }}">
+          <a class="carousel-item{% if forloop.first %} active{% endif %} browse-link" href="/search/?language={{ language.url_format }}&view=grid">
             <h1>
               <strong>
                 {{ language }}
