--- a/index/static/style.css
+++ b/index/static/style.css
@@ -318,7 +318,8 @@ a:hover {
 .dope-wrapper {
   margin: auto;
   font-size: 14px;
-  padding: 10px 25px;
+  padding: 10px 20px;
+  max-width: 375px;
   text-align: center;
 }
 
