--- a/index/static/style.css
+++ b/index/static/style.css
@@ -43,6 +43,7 @@ input[type=checkbox] {
 }
 .dope-check-label span {
   /* <-- style the artificial checkbox */
+  position: relative;
   height: 20px;
   width: 20px;
   border: 2px solid rgb(0, 191, 165);
@@ -60,8 +61,8 @@ input[type=checkbox] {
   width: 10px;
   height: 7px;
   background: 0 0;
-  top: 5px;
-  left: 23px;
+  top: 3px;
+  left: 3px;
   border: 3px solid #00bfa5;
   border-top: none;
   border-right: none;
