no results beyond page 83 bug acknowledgement

--- a/podcasts/templates/search.html
+++ b/podcasts/templates/search.html
@@ -141,6 +141,7 @@
     {% endif %}
   </div>
 {% endif %}
+{% if results.pages %}
 <div class="row">
   {% include "pagination.min.html" %}
 </div>
