--- a/podcasts/templates/subscriptions.html
+++ b/podcasts/templates/subscriptions.html
@@ -6,7 +6,7 @@
 <div class="row subscriptions-results">
   {% for subscription in results.podcasts %}
     {% with subscription.podcast as podcast %}
-      <div class="col-lg-2 col-md-3 col-4 subscriptions-result" data-podid="{{ podcast.podid }}">
+      <div class="col-lg-2 col-md-3 col-4 grid-result" data-podid="{{ podcast.podid }}">
         <a class="showpod-link" data-podid="{{ podcast.podid }}" href="{% url 'showpod' podid=podcast.podid %}">
           <img class="img-fluid" src="http://{{ podcast.artworkUrl }}200x200bb.jpg" onerror="this.src='https://dopepod.me/img/{{ podcast.artworkUrl }}200x200bb.jpg'"
             alt="{{ podcast.title }}" />
