o yea 1 mo thing

--- a/index/static/style.css
+++ b/index/static/style.css
@@ -919,7 +919,7 @@ a.donut-wrapper {
 .grid-result p {
   font-size: 12px;
 }
-.grid-results.selected .select-subscription {
+.grid-result.selected .select-subscription {
   background: rgb(0, 191, 165);
   color: #fff;
 }
